--- a/client/config/database.yml
+++ b/client/config/database.yml
@@ -5,10 +5,11 @@ development:
   host: localhost
   password: ''
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  username: root
+  adapter: mysql
+  database: vanilla_test
+  host: localhost
+  password: ''
 production: 
   username: root
   adapter: mysql
