--- a/client/config/settings.yml
+++ b/client/config/settings.yml
@@ -5,3 +5,4 @@ site_slogan: Small moments can make a big difference.
 webthumb_key: ff1e5c1f36807f9e87868f9c01c33dbb
 development:
   site_name: Spots of Time development
+  site_url: http://localhost:3000
