--- a/client/config/settings.yml
+++ b/client/config/settings.yml
@@ -1,6 +1,6 @@
 google_analytics: UA-27713229-1
 site_name: Spots of Time
-site_url: http://spots.yoomee.com
+site_url: http://spotsoftime.org.uk
 site_email: info@spotsoftime.org.uk
 site_slogan: Small moments can make a big difference.
 webthumb_key: ff1e5c1f36807f9e87868f9c01c33dbb
