--- a/client/config/settings.yml
+++ b/client/config/settings.yml
@@ -7,3 +7,5 @@ webthumb_key: ff1e5c1f36807f9e87868f9c01c33dbb
 development:
   site_name: Spots of Time development
   site_url: ymlocal.com:3000
+production:
+  site_url: http://spotsoftime.org.uk
